--- a/src/views/tasks.ejs
+++ b/src/views/tasks.ejs
@@ -22,7 +22,7 @@
           <tbody>
             <% tasks.forEach(function(task, i) { %>
 
-              <% if (typeof task !=='undefined' && task.isComplete) { console.log(task.isComplete) %>
+              <% if (typeof task !=='undefined' && task.isComplete) { %>
             <tr class="table-success">
               <% } else { %><tr>
                 <% } %>
