Fix the TextArea field remove required

--- a/src/views/form.ejs
+++ b/src/views/form.ejs
@@ -33,7 +33,7 @@
                       <div class="row mb-3">
                         <label for="description" class="col-3 col-form-label">Description:</label>
                         <div class="col-12">
-                          <textarea required name="description" id="description" class="form-control"><%= typeof task !== 'undefined' ? task.dynamicElement : '' %></textarea>
+                          <textarea  name="description" id="description" class="form-control"><%= typeof task !== 'undefined' ? task.dynamicElement : '' %></textarea>
                         </div>
                       </div>
                 
